estilização da header

--- a/code/index.html
+++ b/code/index.html
@@ -6,9 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hollow Knight</title>
 
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="_stylesheets/global.css">
+    <link rel="stylesheet" href="_stylesheets/style.css">
+    <link rel="stylesheet" href="_stylesheets/boxes.css">
+    <link rel="stylesheet" href="_stylesheets/colors.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi magnam quasi sunt quisquam veritatis repudiandae perspiciatis facere corrupti eum voluptatem at harum, consequuntur quo, culpa exercitationem provident molestias, atque corporis?</p>
+    <header>
+        <div class="accessibility-bar bg-black">
+            <ul class="ul-nav">
+                <li class="li-nav me-2 btn-accessibility"><a class="link-nav btn-text" href="">+A</a></li>
+                <li class="li-nav me-2 btn-accessibility"><a class="link-nav btn-text" href="">A</a></li>
+                <li class="li-nav btn-accessibility"><a class="link-nav btn-text" href="">-A</a></li>
+            </ul>
+        </div>
+
+        <nav class="navbar bg-secondary">
+            <ul class="ul-nav my-2">
+                <li class="li-nav me-3"><a class="link-nav btn-text" href="">Anúncios</a></li>
+                <li class="li-nav me-3"><a class="link-nav btn-text" href="">Home</a></li>
+                <li class="li-nav"><a class="link-nav btn-text" href="">Sobre nós</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
