--- a/code/index.html
+++ b/code/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hollow Knight</title>
 
+    <link rel="stylesheet" href="_stylesheets/grid.css">
     <link rel="stylesheet" href="_stylesheets/global.css">
     <link rel="stylesheet" href="_stylesheets/style.css">
     <link rel="stylesheet" href="_stylesheets/boxes.css">
     <link rel="stylesheet" href="_stylesheets/colors.css">
 </head>
 <body>
-    <header>
+    <header class="container">
         <div class="accessibility-bar bg-black">
             <ul class="ul-nav">
                 <li class="li-nav me-2 btn-accessibility"><a class="link-nav btn-text" href="">+A</a></li>
