--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hollow Knight</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+
     <link rel="stylesheet" href="_stylesheets/grid.css">
     <link rel="stylesheet" href="_stylesheets/global.css">
     <link rel="stylesheet" href="_stylesheets/style.css">
@@ -13,8 +15,8 @@
     <link rel="stylesheet" href="_stylesheets/colors.css">
 </head>
 <body>
-    <header class="container">
-        <div class="accessibility-bar bg-black">
+    <header class="">
+        <div class="accessibility-bar bg-black container">
             <ul class="ul-nav">
                 <li class="li-nav me-2 btn-accessibility"><a class="link-nav btn-text" href="">+A</a></li>
                 <li class="li-nav me-2 btn-accessibility"><a class="link-nav btn-text" href="">A</a></li>
@@ -22,7 +24,7 @@
             </ul>
         </div>
 
-        <nav class="navbar bg-secondary">
+        <nav class="navbar bg-secondary container d-flex justify-content-center align-items-center">
             <ul class="ul-nav my-2">
                 <li class="li-nav me-3"><a class="link-nav btn-text" href="">Anúncios</a></li>
                 <li class="li-nav me-3"><a class="link-nav btn-text" href="">Home</a></li>
@@ -30,5 +32,20 @@
             </ul>
         </nav>
     </header>
+
+    <main class="container">
+        <section>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, rem quaerat voluptate eveniet vel aperiam saepe dolor iste velit quibusdam. Animi quaerat aliquam aut molestiae nisi iusto officiis reiciendis excepturi!
+        </section>
+    </main>
+
+    <footer class="bg-secondary container d-grid align-items-center">
+        <p class="justify-self-center">Copyright © 2022, Todos os direitos reservados</p>
+        <ul class="ul-nav justify-self-end">
+            <li class="li-nav me-2"><a class="link-nav btn-text" href=""><i class="bi bi-youtube"></i></a></li>
+            <li class="li-nav me-2"><a class="link-nav btn-text" href=""><i class="bi bi-twitter"></i></a></li>
+            <li class="li-nav"><a class="link-nav btn-text" href=""><i class="bi bi-facebook"></i></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
