--- a/code/index.html
+++ b/code/index.html
@@ -8,11 +8,14 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
+    <link rel="stylesheet" href="_stylesheets/text.css">
+    <link rel="stylesheet" href="_stylesheets/icons.css">
     <link rel="stylesheet" href="_stylesheets/grid.css">
     <link rel="stylesheet" href="_stylesheets/global.css">
     <link rel="stylesheet" href="_stylesheets/style.css">
     <link rel="stylesheet" href="_stylesheets/boxes.css">
     <link rel="stylesheet" href="_stylesheets/colors.css">
+    <link rel="stylesheet" href="_stylesheets/grid.css">
 </head>
 <body>
     <header class="">
@@ -40,12 +43,14 @@
     </main>
 
     <footer class="bg-secondary container d-grid align-items-center">
-        <p class="justify-self-center">Copyright © 2022, Todos os direitos reservados</p>
-        <ul class="ul-nav justify-self-end">
-            <li class="li-nav me-2"><a class="link-nav btn-text" href=""><i class="bi bi-youtube"></i></a></li>
-            <li class="li-nav me-2"><a class="link-nav btn-text" href=""><i class="bi bi-twitter"></i></a></li>
-            <li class="li-nav"><a class="link-nav btn-text" href=""><i class="bi bi-facebook"></i></a></li>
-        </ul>
+        <p class="col-center text-center">Copyright © 2022, Todos os direitos reservados</p>
+        <div class="d-flex justify-content-end">
+            <ul class="ul-nav">
+                <li class="li-nav me-2"><a class="link-nav btn-text" href=""><i class="bi bi-youtube icon"></i></a></li>
+                <li class="li-nav me-2"><a class="link-nav btn-text" href=""><i class="bi bi-twitter icon"></i></a></li>
+                <li class="li-nav"><a class="link-nav btn-text" href=""><i class="bi bi-facebook icon"></i></a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
