configuração da section

--- a/code/index.html
+++ b/code/index.html
@@ -29,21 +29,29 @@
 
         <nav class="navbar bg-secondary container d-flex justify-content-center align-items-center">
             <ul class="ul-nav my-2">
-                <li class="li-nav me-3"><a class="link-nav btn-text" href="">Anúncios</a></li>
-                <li class="li-nav me-3"><a class="link-nav btn-text" href="">Home</a></li>
+                <li class="li-nav me-4"><a class="link-nav btn-text" href="">Anúncios</a></li>
+                <li class="li-nav me-4"><a class="link-nav btn-text" href="">Home</a></li>
                 <li class="li-nav"><a class="link-nav btn-text" href="">Sobre nós</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="container">
-        <section>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, rem quaerat voluptate eveniet vel aperiam saepe dolor iste velit quibusdam. Animi quaerat aliquam aut molestiae nisi iusto officiis reiciendis excepturi!
+        <section class="d-grid d-grid-section my-4 align-items-center">
+            <div class="align-self-center">
+                <h1 class="h1-default color-white m-0">Enfrente as profundezas de um reino esquecido</h1>
+                <p class="p-display color-white mt-2 mb-3">Como o enigmático Cavaleiro, você atravessará as profundezas, desvendará seus mistérios e vencerá seus males.</p>
+                <button class="btn-default btn-text color-white"><i class="bi bi-steam icon me-1"></i> Baixe o jogo</button>
+            </div>
+
+            <div class="d-flex justify-content-center">
+                <img class="img-fluid" src="_images/The_Knight.png" height="520px" alt="">
+            </div>
         </section>
     </main>
 
-    <footer class="bg-secondary container d-grid align-items-center">
-        <p class="col-center text-center">Copyright © 2022, Todos os direitos reservados</p>
+    <footer class="bg-secondary container d-grid d-grid-footer align-items-center">
+        <p class="col-center text-center p-default color-white">Copyright © 2022, Todos os direitos reservados</p>
         <div class="d-flex justify-content-end">
             <ul class="ul-nav">
                 <li class="li-nav me-2"><a class="link-nav btn-text" href=""><i class="bi bi-youtube icon"></i></a></li>
