ajustes na exibição da section

--- a/code/index.html
+++ b/code/index.html
@@ -38,13 +38,13 @@
 
     <main class="container">
         <section class="d-grid d-grid-section my-4 align-items-center">
-            <div class="align-self-center">
+            <div class="align-self-center row-content">
                 <h1 class="h1-default color-white m-0">Enfrente as profundezas de um reino esquecido</h1>
                 <p class="p-display color-white mt-2 mb-3">Como o enigmático Cavaleiro, você atravessará as profundezas, desvendará seus mistérios e vencerá seus males.</p>
                 <button class="btn-default btn-text color-white"><i class="bi bi-steam icon me-1"></i> Baixe o jogo</button>
             </div>
 
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center row-image">
                 <img class="img-fluid" src="_images/The_Knight.png" height="520px" alt="">
             </div>
         </section>
