--- a/code/teste.html
+++ b/code/teste.html
@@ -18,10 +18,17 @@
     <link rel="stylesheet" href="_stylesheets/grid.css">
 </head>
 <body>
-    <div id="principal"></div>
+    <div id="header"></div>
+
+    <main id="main" class="container">
+
+    </main>
     
 </body>
+
 <script src="_js/components/component.js"></script>
+<script src="_js/components/section/section_content.js"></script>
+<script src="_js/components/section/section.js"></script>
 <script src="_js/components/header/menu.js"></script>
 <script src="_js/components/header/header.js"></script>
 <script src="_js/app.js"></script>
