--- a/code/index.html
+++ b/code/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="d-flex justify-content-center row-image">
-                <img class="img-fluid" src="_images/The_Knight.png" height="520px" alt="">
+                <img class="img-fluid" src="_images/The_Knight.png" alt="">
             </div>
         </section>
     </main>
