--- a/code/teste.html
+++ b/code/teste.html
@@ -23,10 +23,14 @@
     <main id="main" class="container">
 
     </main>
+
+    <div id="footer"></div>
     
 </body>
-
+<script src="_js/components/icon/icon.js"></script>
 <script src="_js/components/component.js"></script>
+
+<script src="_js/components/footer/footer.js"></script>
 <script src="_js/components/section/section_content.js"></script>
 <script src="_js/components/section/section.js"></script>
 <script src="_js/components/header/menu.js"></script>
