ajustes na geração de conteúdo via js

--- a/code/teste.html
+++ b/code/teste.html
@@ -29,4 +29,5 @@
 <script src="_js/components/header/menu.js"></script>
 <script src="_js/components/header/header.js"></script>
 <script src="_js/app.js"></script>
+<script src="_js/controller.js"></script>
 </html>
