implementação da troca de página via js

--- a/code/teste.html
+++ b/code/teste.html
@@ -20,11 +20,12 @@
 <body>
 
 </body>
+<script src="_js/components/section/section_content.js"></script>
+<script src="_data/data.js"></script>
 <script src="_js/components/icon/icon.js"></script>
 <script src="_js/components/component.js"></script>
 
 <script src="_js/components/footer/footer.js"></script>
-<script src="_js/components/section/section_content.js"></script>
 <script src="_js/components/section/section.js"></script>
 <script src="_js/components/header/menu.js"></script>
 <script src="_js/components/header/header.js"></script>
