ajustes no layout

--- a/code/teste.html
+++ b/code/teste.html
@@ -24,6 +24,7 @@
 <script src="_data/data.js"></script>
 <script src="_js/components/icon/icon.js"></script>
 <script src="_js/components/component.js"></script>
+<script src="_js/components/divisory/divisory.js"></script>
 
 <script src="_js/components/footer/footer.js"></script>
 <script src="_js/components/section/section.js"></script>
