codigicação da section dos desenvolvedores

--- a/code/index.html
+++ b/code/index.html
@@ -50,6 +50,39 @@
         </section>
     </main>
 
+
+    <section class="d-flex justify-content-center align-items-center flex-wrap justify-content-around container">
+        <div class="person py-1 mb-3">
+            <div>
+                <img class="img-perfil" src="_images/artorius.webp" alt="">
+            </div>
+            <div class="text-center">
+                <p class="btn-text color-white">Victor Martins</p>
+                <p class="p-default color-white">mentorando</p>
+            </div>
+        </div>
+
+        <div class="person py-1 mb-3">
+            <div>
+                <img class="img-perfil" src="_images/artorius.webp" alt="">
+            </div>
+            <div class="text-center">
+                <p class="btn-text color-white">Victor Martins</p>
+                <p class="p-default color-white">mentorando</p>
+            </div>
+        </div>
+
+        <div class="person py-1 mb-3">
+            <div>
+                <img class="img-perfil" src="_images/artorius.webp" alt="">
+            </div>
+            <div class="text-center">
+                <p class="btn-text color-white">Victor Martins</p>
+                <p class="p-default color-white">mentorando</p>
+            </div>
+        </div>
+    </section>
+
     <footer class="bg-secondary container d-grid d-grid-footer align-items-center">
         <p class="col-center text-center p-default color-white">Copyright © 2022, Todos os direitos reservados</p>
         <div class="d-flex justify-content-end">
