--- a/code/teste.html
+++ b/code/teste.html
@@ -20,11 +20,13 @@
 <body>
 
 </body>
+<script src="_js/entities/dev.js"></script>
 <script src="_js/components/section/section_content.js"></script>
 <script src="_data/data.js"></script>
 <script src="_js/components/icon/icon.js"></script>
 <script src="_js/components/component.js"></script>
 <script src="_js/components/divisory/divisory.js"></script>
+<script src="_js/components/section/section_devs.js"></script>
 
 <script src="_js/components/footer/footer.js"></script>
 <script src="_js/components/section/section.js"></script>
