implementação da barra de acessibilidade

--- a/code/teste.html
+++ b/code/teste.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" style="font-size: 16px;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,4 +34,5 @@
 <script src="_js/components/header/header.js"></script>
 <script src="_js/app.js"></script>
 <script src="_js/controller.js"></script>
+<script src="_js/acessbility.js"></script>
 </html>
